Исправил ошибку в коде

--- a/style.scss
+++ b/style.scss
@@ -220,7 +220,7 @@ body {
   
   .submit {
     background: #5A98D0;
-    box-shadow: 5px 20px 50px rgb(16 112 177 / 20%);
+    box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
     border-radius: 10px;
     border: none;
     padding: 23px 0;
