--- a/style.scss
+++ b/style.scss
@@ -371,7 +371,7 @@ body {
   }
   
   .mail-item:nth-child(1):before {
-    background-image: url(img/ic_language_24px.png);
+    background-image: url(img/Vector.png);
   }
   
   .mail-item:nth-child(2):before {
