--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+$width-site: 1140px;
+
 body {
     font-family: sans-serif;
     display: block;
@@ -11,7 +13,7 @@ body {
   
   
   .container {
-    max-width: 1140px;
+    max-width: $width-site;
     margin: 0 auto;
   }
   
